--- a/ServerDB/ServerDB/Views/Server/Index.cshtml
+++ b/ServerDB/ServerDB/Views/Server/Index.cshtml
@@ -1,8 +1,62 @@
-﻿@{
-	ViewData["Title"] = "Servers Registry";
+﻿@model IEnumerable<ServerDB.Models.ServerModel>
+
+@{
+    ViewData["Title"] = "Servers registry";
 }
 
-<div class="text-center">
-	<h1 class="display-4">Welcome to servers registry</h1>
-	<p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<h1>Servers registry</h1>
+@if (TempData["AlertMsg"] != null)
+{
+<div class="alert alert-success">
+	@TempData["AlertMsg"]
+	<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+		<span aria-hidden="true">&times;</span>
+	</button>
 </div>
+}
+<p>
+    <a asp-action="Add" class="btn btn-primary">Add new server</a>
+</p>
+<table class="table table-striped table-hover table-light">
+    <thead class="thead-dark">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.OS)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.IPAddress)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Location)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+	<tbody>
+		@foreach (var item in Model)
+		{
+			<tr>
+				<td>
+					@Html.DisplayFor(modelItem => item.Name)
+				</td>
+				<td>
+					@Html.DisplayFor(modelItem => item.OS)
+				</td>
+				<td>
+					@Html.DisplayFor(modelItem => item.IPAddress)
+				</td>
+				<td>
+					@Html.DisplayFor(modelItem => item.Location)
+				</td>
+				<td>
+					<a asp-action="Details" asp-route-id="@item.Id" class="btn btn-primary">Details</a> |
+					<a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-success">Edit</a> |
+					<a asp-action="Remove" asp-route-id="@item.Id" class="btn btn-danger">Remove</a>
+				</td>
+			</tr>
+		}
+	</tbody>
+</table>
